--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands =
 [testenv:py310-2.16.X]
 basepython = python3.10
 deps =
-    wagtail>=2.16,<3.0
+    wagtail==4.1.1
 
 [testenv:py39-2.16.X]
 basepython = python3.9
